--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -17,4 +17,9 @@ scrape_configs:
     scrape_interval: 5s
 
     static_configs:
-      - targets: ['localhost:9090','node-exporter:9100'] # FIXME
+      - targets: ['localhost:9090']
+
+  - job_name: 'node-exprter'
+    dns_sd_configs:
+      - names:
+        - node-exporter.ex-r53-auto-naming.ecs-service-discovery.local
